force-app/main/default/objects/Possession__c/Possession__c.object-meta.xml
<CustomObject>
    <label>Possession</label>
    <nameField>
        <label>Possession Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Possessions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>