force-app/main/default/objects/Possession__c/fields/All_Dues_Cleared__c.field-meta.xml
<CustomField>
    <fullName>All_Dues_Cleared__c</fullName>
    <formula>Booking__r.Total_Outstanding__c &lt;= 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All Dues Cleared</label>
    <type>Checkbox</type>
</CustomField>