force-app/main/default/objects/Possession__c/fields/Delay_Reason__c.field-meta.xml
<CustomField>
    <fullName>Delay_Reason__c</fullName>
    <label>Delay Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>