force-app/main/default/objects/Possession__c/fields/Handed_Over_By__c.field-meta.xml
<CustomField>
    <fullName>Handed_Over_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Handed Over By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Possessions Handed</relationshipLabel>
    <relationshipName>Possessions_Handed</relationshipName>
    <type>Lookup</type>
</CustomField>