force-app/main/default/objects/Possession__c/fields/Handed_Over_To__c.field-meta.xml
<CustomField>
    <fullName>Handed_Over_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Handed Over To</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Possessions Received</relationshipLabel>
    <relationshipName>Possessions_Received</relationshipName>
    <type>Lookup</type>
</CustomField>