force-app/main/default/objects/Possession__c/fields/Handover_Notes__c.field-meta.xml
<CustomField>
    <fullName>Handover_Notes__c</fullName>
    <label>Handover Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>