force-app/main/default/objects/Possession__c/fields/Keys_Handed_Date__c.field-meta.xml
<CustomField>
    <fullName>Keys_Handed_Date__c</fullName>
    <label>Keys Handed Date</label>
    <type>Date</type>
</CustomField>