force-app/main/default/objects/Possession__c/fields/NOC_Issued__c.field-meta.xml
<CustomField>
    <fullName>NOC_Issued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NOC Issued</label>
    <type>Checkbox</type>
</CustomField>