force-app/main/default/objects/Possession__c/fields/Offered_Date__c.field-meta.xml
<CustomField>
    <fullName>Offered_Date__c</fullName>
    <label>Possession Offered Date</label>
    <type>Date</type>
</CustomField>