force-app/main/default/objects/Possession__c/fields/Open_Snag_Count__c.field-meta.xml
<CustomField>
    <fullName>Open_Snag_Count__c</fullName>
    <label>Open Snag Count</label>
    <summaryFilterItems>
        <field>Snag_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Open,In Progress</value>
    </summaryFilterItems>
    <summaryForeignKey>Snag_Item__c.Possession__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>