force-app/main/default/objects/Possession__c/fields/Snag_Count__c.field-meta.xml
<CustomField>
    <fullName>Snag_Count__c</fullName>
    <label>Snag Count</label>
    <summaryForeignKey>Snag_Item__c.Possession__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>