force-app/main/default/objects/Possession__c/fields/Snag_Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Snag_Inspection_Date__c</fullName>
    <label>Snag Inspection Date</label>
    <type>Date</type>
</CustomField>