force-app/main/default/objects/Possession__c/fields/Snag_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Snag_Target_Date__c</fullName>
    <label>Snag Resolution Target</label>
    <type>Date</type>
</CustomField>