force-app/main/default/objects/Possession__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Ready to Offer</fullName><default>true</default><label>Ready to Offer</label></value>
            <value><fullName>Offered</fullName><default>false</default><label>Offered</label></value>
            <value><fullName>Snag Phase</fullName><default>false</default><label>Snag Phase</label></value>
            <value><fullName>Cleared</fullName><default>false</default><label>Cleared</label></value>
            <value><fullName>Handed Over</fullName><default>false</default><label>Handed Over</label></value>
            <value><fullName>Delayed</fullName><default>false</default><label>Delayed</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>